# My-Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
root/scripts/: build.sh  test.sh
root/src/: main.c
root/src/emulator/: emulator.c
root/src/emulator/cpu/: cpu.c  cpu.h
root/src/emulator/instructions/: instructions.c  instructions.h
root/src/emulator/memory/: memory.c  memory.h
scripts/: build.sh  test.sh
src/: CMakeLists.txt  main.c
src/emulator/: CMakeLists.txt  emulator.c  emulator.h
src/emulator/cpu/: CMakeLists.txt  cpu.c  cpu.h  infos
src/emulator/memory/: CMakeLists.txt  memory.c  memory.h
test/cpu/: UTST_cpu.c
test/memory/: UTST_memory.c
